--- a/.github/workflows/Build-and-Deploy.yaml
+++ b/.github/workflows/Build-and-Deploy.yaml
@@ -3,7 +3,7 @@ name: Build and Deliver Docker Package
 on:
   push:
     branches:
-      - master  # Change this to your main branch
+      - master # Change this to your main branch
 
 env:
   REGISTRY: ghcr.io
@@ -27,12 +27,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.MY_SECRET }}  # Use the MY_SECRET secret here
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
